<resources>
    <string name="app_name" translatable="false">ThessSense</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_about">Σχετικά με την εφαρμογή</string>

    <string name="menu_home">Αρχική</string>
    <string name="home_image_desc">Εικόνα Αρχικής Σελίδας</string>
    <string name="menu_gallery">Δεδομένα Νερού</string>
    <string name="menu_slideshow">Δεδομένα Αέρα</string>
    <string name="menu_water">Σύγκριση Νερού</string>
    <string name="menu_air">Σύγκριση Αέρα</string>
    <string name="home_desc1">ΤΙ ΚΑΝΕΙ Η ΕΦΑΡΜΟΓΗ ΜΑΣ</string>
    <string name="home_desc2">Η ThessSense σας παρέχει δεδομένα της ποιότητας του νερού και του αέρα στον Νομό Θεσσαλονίκης. Μπορείτε να ελέγξτε τα επίπεδα ρύπανσης, καθώς και να συγκρίνετε στοιχεία ανά χρονική περίοδο.</string>
    <string name="fullscreen_icon_desc">Επέκταση Χάρτη</string>
    <string name="co">Μονοξείδιο του Άνθρακα (CO)</string>
    <string name="gas">Προέρχεται από ατελή καύση καυσίμων.</string>
    <string name="no">Μονοξείδιο του Αζώτου (NO)</string>
    <string name="no_desc">Παράγεται σε υψηλές θερμοκρασίες κάυσης.</string>
    <string name="no2">Διοξείδιο του Αζώτου (NO₂)</string>
    <string name="no2_desc">Σχηματίζεται από την οξείδωση του ΝΟ στην ατμόσφαιρα.</string>
    <string name="so2">Διοξείδιο του Θείου (SO₂)</string>
    <string name="so2_desc">Εκλύεται από καύση άνθρακα ή πετρελαίου\nμε θείο.</string>
    <string name="o3_desc">Δημιουργείται από φωτοχημικές αντιδράσεις.</string>
    <string name="o3">"Όζον (Ο₃)\n"</string>
    <string name="app_desc">Η εφαρμογή ThessSense δημιουργήθηκε από τον Ιωάννη Δουλκερίδη και τον Ευστράτιο Δεληγεώργη. Τα δεδομένα που χρησιμοποιήθηκαν προέρχονται από το Thessaloniki Open Data Space.</string>
    <string name="water_limit">Ενδεικτικά όρια ποιότητας νερού:</string>
    <string name="turbidity">Θολότητα</string>
    <string name="turbidity_limit" translatable="false">≤ 1 NTU</string>
    <string name="color">Χρώμα</string>
    <string name="Aluminum">Αργίλιο</string>
    <string name="Chlorides">Χλωριούχα</string>
    <string name="Conductivity">Αγωγιμότητα</string>
    <string name="Residual_Chlorine">Υπολειμματικό\nΧλώριο</string>
    <string name="fullscreen">Αναπαραγωγή σε πλήρη οθόνη</string>
    <string name="air_limits">Ενδεικτικά όρια ποιότητας αέρα:</string>
    <string name="water_parameters">Κύριες παράμετροι του νερού:</string>
    <string name="ntu">Θολότητα (NTU)</string>
    <string name="turbidity_water">Δείκτης ύπαρξης σωματιδίων που θολώνουν το νερό.</string>
    <string name="aluminum_desc">Μεταλλικό στοιχείο που προστίθεται μερικές φορές κατά την επεξεργασία.</string>
    <string name="conductivity_desc">Μετρά τα διαλυμένα άλατα και ιόντα στο νερό.</string>
    <string name="residual_chlorine_desc">Εξασφαλίζει την υγιεινή απολύμανση του νερού.</string>
    <string name="language">Αλλαγή Γλώσσας</string>
    <string name="air_data">Κύριες αιτίες των αερίων:</string>
    <string name="conductivity_desc2">≤ 2500 μS/cm στους 20°C</string>
    <string-array name="months_gr">
        <item>Ιανουάριος</item>
        <item>Φεβρουάριος</item>
        <item>Μάρτιος</item>
        <item>Απρίλιος</item>
        <item>Μάιος</item>
        <item>Ιούνιος</item>
        <item>Ιούλιος</item>
        <item>Αύγουστος</item>
        <item>Σεπτέμβριος</item>
        <item>Οκτώβριος</item>
        <item>Νοέμβριος</item>
        <item>Δεκέμβριος</item>
    </string-array>
    <string-array name="months_en">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>